<resources>
    <string name="province">山东</string>
    <string name="city">临沂</string>
    <string name="district">兰山区</string>
    <string name="gesture_password_open_explain">密码锁会在您打开百姓警察时自动开启，\n需要解开手势密码才能使用。</string>
    <string name="welcome">百姓警察，你我共参与！</string>
    <string name="app_name_label">百姓警察</string>
    <string name="no_application_found">对不起，找不到可执行此操作的应用程序！</string>
    <string name="clear_success">清理缓存成功</string>
    <string name="sdcard_invalid">存储卡不可用，请检查</string>
    <string name="sdcard_space_limit">没有足够的存储空间</string>
    <string name="please_install_file_manager">请安装文件管理器</string>
    <string name="please_choose_file">请选择文件</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="continue_text">继续</string>
    <string name="please_wait">请稍候…</string>
    <string name="prompt_tip">温馨提示</string>
    <string name="prompt_no_longer">不再提示</string>
    <string name="back">返回</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="loading">加载中…</string>
    <string name="service_exception">服务异常，请稍等…</string>
    <string name="network_error">当前网络不可用</string>
    <string name="empty_data">暂时没有任何数据</string>
    <string name="refresh_again">刷新试试</string>
    <string name="select_image">相册选择</string>
    <string name="scene_photo">现场拍照</string>
    <string name="live_video">现场录像</string>
    <string name="live_audio">现场录音</string>
    <string name="cache_record">缓存记录</string>
    <string name="collect_record">采集记录</string>
    <string name="collect_record_existed">记录已存在</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_fail">提交失败</string>
    <string name="select_picture_fail">获取图片失败</string>
    <string name="back_tip">再按一次退出</string>
    <string name="dialog_look">查看</string>
    <string name="dialog_delete">删除</string>
    <string name="dialog_use">使用</string>
    <string name="uploading_title">正在提交…</string>
    <string name="run_back">后台运行</string>
    <string name="share_success">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="request_permission">权限申请</string>
    <string name="go_to_set">去设置</string>
    <string name="io_permission_request_message">为了您的正常使用，需要使用本机存储权限，请您在设置—应用—平安府谷—权限中开启权限。</string>
    <string name="phone_permission_request_message">为了您的正常使用，需要使用电话权限，请您在设置—应用—平安府谷—权限中开启权限。</string>
    <string name="location_permission_request_message">为了您的正常使用，需要使用位置权限，请您在设置—应用—平安府谷—权限中开启权限。</string>
    <string name="camera_permission_request_message">为了您的正常使用，需要使用相机权限，请您在设置—应用—平安府谷—权限中开启权限。</string>
    <string name="audio_permission_request_message">为了您的正常使用，需要使用录音权限，请您在设置—应用—平安府谷—权限中开启权限。</string>
    <string name="call_permission_request_message">如您需要在客户端内拨打客服电话，请您在设置—应用—平安府谷—权限中开启权限。</string>
    <string name="open_wifi">开启wifi</string>
    <string name="continue_uploading">继续上传</string>
    <string name="upload_without_wifi_tip">当前非wifi网络模式，所上传文件大小超出%1$sM,是否继续上传？</string>
    <string name="confirm_phone_tip">请确认手机号码是否正确</string>
    <string name="reset_password_tip">您的密码为初始密码</string>
    <string name="supplement_info_tip">请补全注册信息后再使用!</string>
    <string name="immediate_experience">立即体验</string>
    <string name="main_person">我的</string>
    <string name="main_notice">通知公告</string>
    <string name="main_home">首页</string>
    <string name="update_version_title">版本更新</string>
    <string name="update_version_message">发现新版本，是否更新？</string>
    <string name="update_fail">更新失败</string>
    <string name="new_version">已经是最新版本</string>
    <string name="downloading">正在下载…</string>
    <string name="download_cancel_message">是否取消更新</string>
    <string name="login_username_hint">请输入手机号/民警号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login_sms">短信登录</string>
    <string name="login_password">密码登录</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_label">登 录</string>
    <string name="login_active_account">激活账号</string>
    <string name="login_go_register">立即注册></string>
    <string name="copyright_owner">榆林市府谷县公安局</string>
    <string name="login_username_empty">请输入手机号/民警号</string>
    <string name="login_password_empty">请输入密码</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="login_reset_password_title">修改密码</string>
    <string name="login_reset_password_message">您的帐号密码为初始密码，请修改密码后登录!</string>
    <string name="login_update">修改</string>
    <string name="login_add_phone_tip">请先完善手机号码</string>
    <string name="login_confirm_phone_title">请确认手机号码是否正确</string>
    <string name="login_confirm_phone_message">您的手机号码：%s</string>
    <string name="check_result_label">审核反馈</string>
    <string name="register_info_check_ok">您的注册信息已审核通过</string>
    <string name="check_welcome">欢迎您成为平安在线一员</string>
    <string name="enter_main">进入主页</string>
    <string name="bind_phone_text">首次登录将绑定手机，请使用常用手机</string>
    <string name="check_again_btn_string">重新提交审核</string>
    <string name="account_title">注册账号</string>
    <string name="register_title">群防力量类型</string>
    <string name="checked">已审核</string>
    <string name="checking">审核中</string>
    <string name="uncheck">待审核</string>
    <string name="check_success">审核通过</string>
    <string name="check_fail">审核不通过</string>
    <string name="register_info_check_ongoing">您的注册信息正在审核中</string>
    <string name="register_info_check_fail">您的注册信息审核失败</string>
    <string name="why_result_info">未通过原因:%s</string>
    <string name="register_result_will_notify_by_sms">请耐心等待审核结果</string>
    <string name="modify_password_label">修改密码</string>
    <string name="old_password_hint">请输入旧密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="confirm_new_password_hint">请确认新密码</string>
    <string name="modify_error_empty_old_pwd">您还未输入旧密码</string>
    <string name="modify_error_empty_new_pwd">您还未输入新密码</string>
    <string name="modify_error_empty_again_pwd">请确认新密码</string>
    <string name="modify_error_new_pwd_conflict">您输入的新密码不一致</string>
    <string name="modify_error_same_as_old">新密码跟旧密码不能一致</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_fail">修改失败</string>
    <string name="register_category_title">请选择群防群治注册类型</string>
    <string name="social_type">群防\n社会力量</string>
    <string name="helper_type">群防\n辅助力量</string>
    <string name="register_next_step">下一步</string>
    <string name="registered_to_login">已有账号，立即登录</string>
    <string name="register_role_empty_tip">请选择注册类型</string>
    <string name="authenticate_label">实名认证</string>
    <string name="supplement_info_label">信息补全</string>
    <string name="card_title">身份证号</string>
    <string name="card_hint">请输入身份证号</string>
    <string name="photo_rec">拍照识别</string>
    <string name="real_name_title">真实姓名</string>
    <string name="real_name_hint">请输入真实姓名</string>
    <string name="sex">性别</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="birth_date_title">出生日期</string>
    <string name="birth_date_sex_hint">填入身份证号自动识别</string>
    <string name="authenticate_type_title">认证方式</string>
    <string name="authenticate_type_dialog_title">认证方式</string>
    <string name="authenticate_auto">自助注册</string>
    <string name="authenticate_artificial">人工审核注册</string>
    <string name="self_help_register_tip">采用二代身份证网上认证技术，用户可自行完成注册流程。请按照语音提示操作，否则易造成无法认证注册。</string>
    <string name="artificial_register_tip">用户注册信息需经注册地派出所民警人工审核，完成注册流程。请拍摄上传正面清晰个人近照，要求png、jpg等格式</string>
    <string name="take_photo">拍照</string>
    <string name="select_photo">相册</string>
    <string name="person_photo">个人近照</string>
    <string name="id_card_empty_tip">请输入身份证</string>
    <string name="id_card_error_tip">请输入正确的身份证号码</string>
    <string name="real_name_empty_tip">请输入真实姓名</string>
    <string name="id_card_face_empty">请上传个人近照</string>
    <string name="id_card_live_detect_empty">请拍摄个人正面照</string>
    <string name="live_detect_success">活体检测成功</string>
    <string name="live_detect_fail">活体检测失败</string>
    <string name="live_detect_no_pass">活体检测结果不通过，请重试</string>
    <string name="person_info_label">个人资料</string>
    <string name="referee_title">推荐人手机号</string>
    <string name="referee_hint">请输入推荐人手机号，非必填</string>
    <string name="region_title">所在地区</string>
    <string name="region_hint">请选择所在地区</string>
    <string name="police_station_title">注册地派出所</string>
    <string name="police_station_hint">请选择注册地派出所</string>
    <string name="gas_station_title">所在加油站</string>
    <string name="gas_station_hint">请选择所在加油站</string>
    <string name="region_dialog_title">选择区域</string>
    <string name="police_station_dialog_title">选择注册地派出所</string>
    <string name="gas_station_dialog_title">选择所在加油站</string>
    <string name="referee_phone_error">请输入正确的推荐人手机号</string>
    <string name="phone_verify">手机验证</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="phone_error_tip">请输入正确的手机号码</string>
    <string name="code_hint">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="countdown_time">重新获取(%ds)</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_error_tip">请输入6–20位字母加数字的密码</string>
    <string name="confirm_password_hint">请确认密码</string>
    <string name="password_difference">输入的密码不一致</string>
    <string name="register">立即注册</string>
    <string name="register_result_label">信息提示</string>
    <string name="register_info_commit_ok">您的注册信息已提交审核</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="register_reset_info_success">完善资料成功</string>
    <string name="register_reset_info_fail">注册失败</string>
    <string name="register_identity_info">身份信息</string>
    <string name="register_address_info">地址信息</string>
    <string name="register_password_info">密码信息</string>
    <string name="active_label">激活账号</string>
    <string name="active_login">激活登录</string>
    <string name="active_success">激活成功</string>
    <string name="active_fail">激活失败</string>
    <string name="forget_password_label">忘记密码</string>
    <string name="reset_password">找回密码</string>
    <string name="reset_password_success">找回密码成功</string>
    <string name="reset_password_fail">找回密码失败</string>
    <string name="legal_case_label">案例录入</string>
    <string name="all_legal_case">全部案例</string>
    <string name="mine_legal_case">我的案例</string>
    <string name="legal_title">标题</string>
    <string name="legal_title_hint">请输入案例情况，限定30个字以内</string>
    <string name="description">描述</string>
    <string name="legal_description_hint">请详细描述录入案例详情，建议提交相关案件案例编号、图片或视频</string>
    <string name="add_cache">缓存</string>
    <string name="confirm_submit">确认提交</string>
    <string name="upload">上传</string>
    <string name="delete">删除</string>
    <string name="subject_title">主题</string>
    <string name="submit">提交</string>
    <string name="image_or_video_record_title">图片/视频记录</string>
    <string name="look_map">查看地图</string>
    <string name="content_description">内容描述</string>
    <string name="report_address">举报地址</string>
    <string name="report_time">举报时间</string>
    <string name="clue_feedback_title">处置反馈</string>
    <string name="clue_subject">线索主题</string>
    <string name="clue_broad_type_tip">请选择线索类型</string>
    <string name="clue_type_tip">请选择线索小类</string>
    <string name="clue_mini_type_tip">请选择线索细项</string>
    <string name="clue_broad_type_title">线索类型</string>
    <string name="clue_type_title">线索小类</string>
    <string name="clue_child_type_title">线索细项</string>
    <string name="clue_subject_tip">请输入主题，限20字以内</string>
    <string name="clue_description_hint">请详细描述举报内容（限100字以内）,建议提交图片或视频以协助核查。</string>
    <string name="coll_address">地址</string>
    <string name="clue_dispose_file_catalog">上传附件（最多5张图片或视频附件）</string>
</resources>