<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.sfb.baselib.widget.form.LinearView
            android:id="@+id/linear_broad_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:linear_content="@string/clue_broad_type_tip"
            app:linear_content_gravity="right"
            app:linear_first_image="@drawable/ic_more"
            app:linear_required="true"
            app:linear_title="@string/clue_broad_type_title" />

        <com.sfb.baselib.widget.form.LinearView
            android:id="@+id/linear_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:linear_content="@string/clue_type_tip"
            app:linear_content_gravity="right"
            app:linear_first_image="@drawable/ic_more"
            app:linear_required="true"
            app:linear_title="@string/clue_type_title" />

        <com.sfb.baselib.widget.form.LinearView
            android:id="@+id/linear_mini_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:linear_content="@string/clue_mini_type_tip"
            app:linear_content_gravity="right"
            app:linear_first_image="@drawable/ic_more"
            app:linear_required="true"
            app:linear_title="@string/clue_child_type_title" />

        <com.sfb.baselib.widget.form.LinearView
            android:id="@+id/linear_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:linear_hint="@string/clue_subject_tip"
            app:linear_input_able="true"
            app:linear_max_length="20"
            app:linear_required="true"
            app:linear_title="@string/subject_title" />

        <com.sfb.baselib.widget.form.LinearView
            android:id="@+id/linear_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:linear_content_gravity="top"
            app:linear_content_height="80dp"
            app:linear_hint="@string/clue_description_hint"
            app:linear_input_able="true"
            app:linear_max_length="100"
            app:linear_required="true"
            app:linear_title="@string/description"
            app:linear_title_gravity="top" />

        <!--20200803需求修改：增加地址编辑，可手动修改-->
        <com.sfb.baselib.widget.form.LinearView
            android:id="@+id/linear_collect_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:linear_first_image="@drawable/ic_repeat"
            app:linear_input_able="true"
            app:linear_title="@string/coll_address" />

        <!--20200803需求修改：增加地址编辑，可手动修改，另一个隐藏自动获取-->
        <com.sfb.baselib.widget.form.LinearView
            android:id="@+id/linear_collect_address_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:linear_first_image="@drawable/ic_repeat"
            app:linear_input_able="true"
            android:visibility="gone"
            app:linear_title="@string/coll_address" />

        <com.sfb.baselib.widget.gridimage.GridImageView
            android:id="@+id/mGridImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mode="mode_add"
            app:title="@string/image_or_video_record_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <com.sfb.baselib.widget.SingleClickView
                android:id="@+id/tv_cache"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:gravity="center"
                android:text="@string/add_cache"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.sfb.baselib.widget.SingleClickView
                android:id="@+id/tv_upload"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:background="@drawable/selector_button"
                android:gravity="center"
                android:text="@string/confirm_submit"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
