<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.sfb.baselib.widget.form.LinearView
            android:id="@+id/linear_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:linear_content_gravity="top"
            app:linear_content_height="100dp"
            app:linear_hint="请反馈该线索处置后现状，限定200字以内。"
            app:linear_input_able="true"
            app:linear_required="true"
            app:linear_title="@string/clue_feedback_title"
            app:linear_title_gravity="top" />

        <com.sfb.baselib.widget.gridimage.GridImageView
            android:id="@+id/mGridImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:catalog="@string/clue_dispose_file_catalog"
            app:mode="mode_add" />

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/shape_main_color_round"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
