<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white_round"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:padding="12dp"
            android:singleLine="true"
            android:text="@string/prompt_tip"
            android:textColor="@color/text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingExtra="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:text="内容"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/selector_check"
            android:drawablePadding="6dp"
            android:text="@string/prompt_no_longer"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/gray_e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_positive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/confirm"
                android:textColor="@color/main_color"
                android:textSize="14sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="6dp"
                android:background="@color/gray_e0" />

            <TextView
                android:id="@+id/tv_negative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>